@@ -156,10 +156,14 @@ class Skin extends Linker {
 	}
 
 	function initPage( &$out ) {
+		global $wgFavicon;
+
 		$fname = 'Skin::initPage';
 		wfProfileIn( $fname );
 
-		$out->addLink( array( 'rel' => 'shortcut icon', 'href' => '/favicon.ico' ) );
+		if( false !== $wgFavicon ) {
+			$out->addLink( array( 'rel' => 'shortcut icon', 'href' => $wgFavicon ) );
+		}
 
 		$this->addMetadataLinks($out);
 
